--- a/style.css
+++ b/style.css
@@ -35,3 +35,12 @@ main {
     overflow: hidden;
     display: flex;
 }
+
+.player {
+    flex: 50%;
+    padding: 9rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.75s;
+}
