--- a/style.css
+++ b/style.css
@@ -44,3 +44,14 @@ main {
     align-items: center;
     transition: all 0.75s;
 }
+
+/* ELEMENTS */
+.name {
+    position: relative;
+    font-size: 4rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    font-weight: 300;
+    margin-bottom: 1rem;
+}
