--- a/style.css
+++ b/style.css
@@ -87,3 +87,10 @@ main {
     text-align: center;
     transition: all 0.75s;
 }
+
+.current-label {
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    font-size: 1.7rem;
+    color: #ddd;
+}
