--- a/style.css
+++ b/style.css
@@ -138,3 +138,8 @@ main {
 .btn--hold {
     top: 46.1rem;
 }
+
+.btn:active {
+    transform: translate(-50%, 3px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+}
