--- a/style.css
+++ b/style.css
@@ -143,3 +143,7 @@ main {
     transform: translate(-50%, 3px);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
+
+.btn:focus {
+    outline: none;
+}
