--- a/style.css
+++ b/style.css
@@ -156,3 +156,7 @@ main {
     height: 10rem;
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
+
+.player--winner {
+    background-color: #2f2f2f;
+}
