--- a/style.css
+++ b/style.css
@@ -160,3 +160,8 @@ main {
 .player--winner {
     background-color: #2f2f2f;
 }
+
+.player--winner .name {
+    font-weight: 700;
+    color: #c7365f;
+}
