--- a/style.css
+++ b/style.css
@@ -169,3 +169,14 @@ main {
 .hidden {
     display: none;
 }
+
+.msg {
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    font-weight: 300;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    color: #c7365f;
+}
